--- a/src/main/dart/web/download_list.html
+++ b/src/main/dart/web/download_list.html
@@ -1,23 +1,43 @@
 <link rel="import" href="packages/polymer/polymer.html">
-<link rel="import" href="download_list_item.html">
 
 <polymer-element name="download-list"> 
   <template>
-
+<style>
+      select {
+        margin-bottom: 30px;
+        display: inline;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.42857143;
+        color: #555;
+        background-color: #fff;
+        background-image: none;
+        border: 1px solid #ccc;
+        border-radius: 2px;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+        -webkit-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+      }
+    </style>
 		<table>
 			<thead>
 				<tr>
-					<td width="60%">filename</td>
-					<td width="20%">size</td>
-					<td width="20%">progress</td>
+					<th width="60%">filename</th>
+					<th width="20%">size</th>
+					<th width="20%">progress</th>
 				</tr>
 			</thead>
 			<tbody>
-				<template repeat="{{download in downloads}}">
-          <download-list-item download="{{download}}"></download-list-item>
-        </template>
+				<!-- 				<template repeat="{{download in downloads}}"> -->
+				<!--           <download-list-item download="{{download}}"></download-list-item> -->
+				<!--         </template> -->
+				<tr>
+					<td>{{download.name}}</td>
+					<td>{{download.size}}</td>
+					<td>{{download.progress}}</td>
+				</tr>
 			</tbody>
 		</table>
-
-  </template>
+  </template> 
 </polymer-element>
