add download component

--- a/src/main/dart/web/index.html
+++ b/src/main/dart/web/index.html
@@ -8,6 +8,7 @@
    
     <!-- web components -->
     <link rel="import" href="download_list.html">
+    <link rel="import" href="add_download_form.html">
     <link rel="import" href="packages/core_elements/core_toolbar.html">
     <link rel="import" href="packages/core_elements/core_icons.html">
     <link rel="import" href="packages/core_elements/core_icon_button.html">
@@ -19,12 +20,13 @@
   <body unresolved>
 
   <core-toolbar>
-      <core-icon-button icon="menu"></core-icon-button>
+    <core-icon-button icon="menu"></core-icon-button>
+    <div style="float: right;">
       <h1 align="right" style="text-align: right">getdown</h1>
+    </div>
   </core-toolbar>
-
   <download-list></download-list>
-
+  <add-download-form></add-download-form>
   <script type="application/dart">export 'package:polymer/init.dart';</script>
 </body>
 </html>
