--- a/src/main/dart/web/download_list.html
+++ b/src/main/dart/web/download_list.html
@@ -1,8 +1,7 @@
 <link rel="import" href="packages/polymer/polymer.html">
 
-<polymer-element name="download-list"> 
-	<template>
-	<style>
+<polymer-element name="download-list"> <template>
+<style>
 /* 	progress { */
 /* 		color: #0063a6; */
 /* 		font-size: .6em; */
@@ -13,28 +12,29 @@
 /* 		border: 1px solid #0063a6; */
 /* 		background: #fff; */
 /* 	} */
-	</style>
-	<h3>downloads</h3>
-	<table width="100%">
-		<thead>
-			<tr>
-				<th align="left" width="70%">filename</th>
-				<th align="left" width="5%">size</th>
-				<th align="left" width="20%">progress</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr template repeat="{{download in downloads}}">
-				<td align="left">{{download.name}}</td>
-				<td align="right">{{download.size}}</td>
-				<td align="right" >
-				  &nbsp;
-				  <progress style="float: left;" id="progress" max="{{download.size}}" value="{{download.progress}}"></progress>
-				  <output  for="progress" id="progressLabel">{{(download.progress*100)/download.size}} %</output>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	</template>
-	<script type="application/dart" src="download_list.dart" />
-</polymer-element>
+</style>
+<section>
+<h3>downloads</h3>
+<table width="100%">
+	<thead>
+		<tr>
+			<th align="left" width="70%">filename</th>
+			<th align="left" width="5%">size</th>
+			<th align="left" width="20%">progress</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr template repeat="{{download in downloads}}">
+			<td align="left">{{download.name}}</td>
+			<td align="right">{{download.size}}</td>
+			<td align="right">&nbsp; <progress style="float: left;"
+					id="progress" max="{{download.size}}" value="{{download.progress}}"></progress>
+				<output for="progress" id="progressLabel">{{(download.progress*100)/download.size}}
+					%</output>
+			</td>
+		</tr>
+	</tbody>
+</table>
+</section>
+<script type="application/dart" src="download_list.dart" ></script>
+</template> </polymer-element>
