remove pubspec.lock from repo since it is generated

--- a/src/main/dart/web/add_download_form.html
+++ b/src/main/dart/web/add_download_form.html
@@ -6,7 +6,7 @@
 <h3>new download</h3>
 <form style="width: 100%;" on-submit="{{sendDownloadRequest}}">
   <div >
-		<input width="90%" "URL" value="{{downloadRequest.url}}"></input>
+		<input width="90%" value="{{downloadRequest.url}}"></input>
 		<button type="submit">Add</button>
 	</div>
 </form>
