addDownload is triggered on form submit

--- a/src/main/dart/web/add_download_form.html
+++ b/src/main/dart/web/add_download_form.html
@@ -2,14 +2,12 @@
 
 <polymer-element name="add-download-form">
 <template>
-<section>
-<h3>new download</h3>
+<h3>add download</h3>
 <form style="width: 100%;" on-submit="{{sendDownloadRequest}}">
   <div >
-		<input width="90%" value="{{downloadRequest.url}}"></input>
+		<input width="90%" value="{{downloadRequest.url}}" />
 		<button type="submit">Add</button>
 	</div>
 </form>
-</section>
 </template> <script type="application/dart" src="add_download_form.dart"></script>
 </polymer-element>
