--- a/src/main/dart/web/index.html
+++ b/src/main/dart/web/index.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>getdown webconsole</title>
-    <script src="packages/web_components/platform.js"></script>
-   
-    <!-- web components -->
-    <link rel="import" href="download_list.html">
-    <link rel="import" href="packages/core_elements/core_toolbar.html">
-    <link rel="import" href="packages/core_elements/core_icons.html">
-    <link rel="import" href="packages/core_elements/core_icon_button.html">
-    
-    <!-- style -->
-    <link rel="stylesheet" href="styles.css">
-    
-  </head>
-  <body unresolved>
 
-  <core-toolbar>
-    <core-icon-button icon="menu"></core-icon-button>
-    <div style="float: right;">
-      <h1 align="right" style="text-align: right">getdown</h1>
-    </div>
-  </core-toolbar>
-  <download-list></download-list>
-  <script type="application/dart">export 'package:polymer/init.dart';</script>
-</body>
+	<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>getdown webconsole</title>
+	<script src="packages/web_components/platform.js"></script>
+	
+	<!-- web components -->
+	<link rel="import" href="getdown_webclient.html">
+	
+	</head>
+
+	<body unresolved>
+	  
+		 <getdown-webclient></getdown-webclient>
+		
+		<script type="application/dart">export 'package:polymer/init.dart';</script>
+		
+	</body>
+	
 </html>
