removed generated element ids

--- a/src/main/dart/web/getdown_webclient.html
+++ b/src/main/dart/web/getdown_webclient.html
@@ -29,10 +29,11 @@
       }
       
     </style>
-    <core-header-panel mode="standard" id="core_header_panel">
-      <core-toolbar id="core_toolbar">
-        <core-icon-button icon="menu" id="core_icon_button"></core-icon-button>
-        <div id="div">getdown console</div>
+    <core-header-panel mode="standard" >
+      <core-toolbar >
+        <core-icon-button icon="menu"></core-icon-button>
+        <div>getdown console</div>
+        <core-icon-button icon="add"></core-icon-button>
       </core-toolbar>
         <download-list></download-list>
     </core-header-panel>
