--- a/src/main/dart/web/getdown_webclient.html
+++ b/src/main/dart/web/getdown_webclient.html
@@ -25,15 +25,14 @@
       }
       #core_toolbar {
         color: rgb(255, 255, 255);
-        background-color: rgb(79, 125, 201);
+        background-color: black;
       }
       
     </style>
-    <core-header-panel mode="standard" >
-      <core-toolbar >
-        <core-icon-button icon="menu"></core-icon-button>
-        <div>getdown console</div>
-        <core-icon-button icon="add"></core-icon-button>
+    <core-header-panel mode="standard" id="core_header_panel">
+      <core-toolbar id="core_toolbar">
+        <core-icon-button icon="menu" id="core_icon_button"></core-icon-button>
+        <div id="app_title">getdown console</div>
       </core-toolbar>
         <download-list></download-list>
     </core-header-panel>
