--- a/src/main/dart/web/add_download_form.html
+++ b/src/main/dart/web/add_download_form.html
@@ -1,13 +1,33 @@
 <link rel="import" href="packages/polymer/polymer.html">
-
+<link rel="import" href="packages/paper_elements/paper_button.html">
 <polymer-element name="add-download-form">
 <template>
-<h3>add download</h3>
-<form style="width: 100%;" on-submit="{{sendDownloadRequest}}">
-  <div >
-		<input width="90%" value="{{downloadRequest.url}}" />
-		<button type="submit">Add</button>
+
+<style>
+  #button{
+      color: white;
+      background:rgb(79, 125, 201);
+      height:30px
+  }
+</style>
+
+<form  id="form" on-submit="{{sendDownloadRequest}}">
+  <div style="width: 100%;height: 40px;">
+	  <div style="float: left;width:90%;">
+		  <label for="url_input">URL</label>
+			<input id="url_input" style="width:90%" value="{{downloadRequest.url}}" />
+		</div>
+		 <paper-button id="button" raised >Add</paper-button>
 	</div>
-</form>
+</form> 
+
+<script type="application/javascript">
+var form = document.getElementById("form");
+
+document.getElementById("button").addEventListener("click", function () {
+  form.submit();
+})  
+</script>
+
 </template> <script type="application/dart" src="add_download_form.dart"></script>
 </polymer-element>
