--- a/src/main/dart/web/add_download_form.html
+++ b/src/main/dart/web/add_download_form.html
@@ -4,30 +4,33 @@
 <template>
 
 <style>
-  #button{
+  #addbutton{
       color: white;
       background:rgb(79, 125, 201);
       height:30px
+      margin-top: 4px;
   }
 </style>
 
-<form  id="form" on-submit="{{sendDownloadRequest}}">
+<script>
+function submit_form()
+{
+	var form = document.getElementById("urlform");
+	form.submit();
+}  
+</script>
+
+<form  id="urlform" on-submit="{{sendDownloadRequest}}">
   <div style="width: 100%;height: 40px;">
-	  <div style="float: left;width:90%;">
+	  <div style="float: left;width:90%;margin-top: 4px;">
 		  <label for="url_input">URL</label>
 			<input id="url_input" style="width:90%" value="{{downloadRequest.url}}" />
 		</div>
-		 <paper-button id="button" raised >Add</paper-button>
+		 <paper-button id="addbutton" onclick="submit_form()" raised >add</paper-button>
 	</div>
 </form> 
 
-<script type="application/javascript">
-var form = document.getElementById("form");
 
-document.getElementById("button").addEventListener("click", function () {
-  form.submit();
-})  
-</script>
 
 </template> <script type="application/dart" src="add_download_form.dart"></script>
 </polymer-element>
