--- a/src/main/dart/web/add_download_form.html
+++ b/src/main/dart/web/add_download_form.html
@@ -12,23 +12,13 @@
   }
 </style>
 
-<script>
-function submit_form()
-{
-	var form = document.getElementById("urlform");
-	form.submit();
-}  
-</script>
-
-<form  id="urlform" on-submit="{{sendDownloadRequest}}">
   <div style="width: 100%;height: 40px;">
 	  <div style="float: left;width:90%;margin-top: 4px;">
 		  <label for="url_input">URL</label>
 			<input id="url_input" style="width:90%" value="{{downloadRequest.url}}" />
 		</div>
-		 <paper-button id="addbutton" onclick="submit_form()" raised >add</paper-button>
+		 <paper-button id="addbutton" on-click="{{sendDownloadRequest}}" raised >add</paper-button>
 	</div>
-</form> 
 
 
 
