add download triggers also download start

--- a/src/main/dart/web/download_list.html
+++ b/src/main/dart/web/download_list.html
@@ -20,11 +20,11 @@
   <table width="100%">
     <thead>
       <tr>
-        <th align="left" width="25%">filename</th>
-        <th align="left" width="45%">url</th>
-        <th align="left" width="5%">size</th>
+        <th align="left" width="20%">filename</th>
+        <th align="left" width="50%">url</th>
         <th align="left" width="5%">state</th>
-        <th align="left" width="20%">progress</th>
+        <th align="left" width="5%">size</th>
+        <th align="left" width="20%" colspan="2">progress</th>
       </tr>
     </thead>
     <tbody>
@@ -33,9 +33,11 @@
         <td align="left">{{download.url}}</td>
         <td align="left">{{download.state}}</td>
         <td align="right">{{download.size}}</td>
-        <td align="right">
+        <td align="right" width="17%">
           <progress style="float: left;" id="progress" max="{{download.size}}" value="{{download.progress}}"></progress>
-          <output for="progress" id="progressLabel">{{(download.progress*100)/download.size}}%</output>
+        </td>
+        <td width="3%">
+          {{(download.progress*100)/download.size}}%
         </td>
       </tr>
     </tbody>
