--- a/src/main/dart/web/getdown_webclient.html
+++ b/src/main/dart/web/getdown_webclient.html
@@ -24,8 +24,8 @@
         position: absolute;
       }
       #core_toolbar {
-        color: rgb(255, 255, 255);
-        background-color: black;
+        color: white;
+        background-color: red;
       }
       
     </style>
