--- a/src/main/dart/web/download_list.html
+++ b/src/main/dart/web/download_list.html
@@ -24,7 +24,7 @@
         <th align="left" width="50%">url</th>
         <th align="left" width="5%">state</th>
         <th align="left" width="5%">size</th>
-        <th align="left" width="20%" colspan="2">progress</th>
+        <th align="left" width="20%">progress</th>
       </tr>
     </thead>
     <tbody>
@@ -32,12 +32,12 @@
         <td align="left">{{download.name}}</td>
         <td align="left">{{download.url}}</td>
         <td align="left">{{download.state}}</td>
-        <td align="right">{{download.size}}</td>
-        <td align="right" width="17%">
-          <progress style="float: left;" id="progress" max="{{download.size}}" value="{{download.progress}}"></progress>
-        </td>
-        <td width="3%">
-          {{(download.progress*100)/download.size}}%
+        <td align="right">{{(download.size/1024).round()}}Kb</td>
+        <td align="right" width="20%">
+        	<progress style="float: left;" id="progress" max="{{download.size}}" value="{{download.progress}}">       		
+        	</progress>
+        	<span>{{(download.progress/1024).round()}}Kb</span>
+        	<span>({{((download.progress*100)/download.size).round()}}%)</span>
         </td>
       </tr>
     </tbody>
