--- a/src/main/dart/web/getdown_webclient.html
+++ b/src/main/dart/web/getdown_webclient.html
@@ -25,7 +25,7 @@
       }
       #core_toolbar {
         color: white;
-        background-color: red;
+        background-color: blue;
       }
       
     </style>
