--- a/src/main/dart/web/index.html
+++ b/src/main/dart/web/index.html
@@ -10,6 +10,8 @@
 	<!-- web components -->
 	<link rel="import" href="getdown_webclient.html">
 	
+	<link rel="icon" type="image/x-icon" href="web/favicon.ico">
+	
 	</head>
 
 	<body unresolved>
