--- a/getdown-application/src/main/resources/static/webconsole/index.html
+++ b/getdown-application/src/main/resources/static/webconsole/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport"	content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 	<title>getdown webconsole</title>
 	<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 	
