--- a/getdown-webconsole/src/main/resources/static/webconsole/index.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/index.html
@@ -2,14 +2,15 @@
 <html>
 
 	<head>
-	<meta charset="utf-8">
-	<meta name="viewport"	content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-	<title>getdown webconsole</title>
-	<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
-	
-	<!-- web components -->
-	<link rel="import" href="application_components/getdown-webconsole-application.html">
-	
+		<link rel="icon" type="image/ico" href="icons/favicon.ico"/>
+		<meta charset="utf-8">
+		<meta name="viewport"	content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+		<title>getdown webconsole</title>
+		<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
+		
+		<!-- web components -->
+		<link rel="import" href="application_components/getdown-webconsole-application.html">
+		
 	</head>
 
 	<body unresolved>
