add titlebar icon

--- a/getdown-webconsole/src/main/resources/static/webconsole/application_components/getdown-webconsole-application.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/application_components/getdown-webconsole-application.html
@@ -86,6 +86,7 @@
 			</core-header-panel>
 			
 			<core-toolbar tool id="content-toolbar">
+				<img  src="../icons/icon-getdown.png" style="width:32px;height:32px;"/>
 				<span flex>getdown</span>
 				<core-icon-button icon="add" on-click="{{onAddDownloadButtonClicked}}"></core-icon-button>
 			</core-toolbar>
