various ui changes

--- a/getdown-webconsole/src/main/resources/static/webconsole/index.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/index.html
@@ -8,6 +8,14 @@
 		<title>getdown webconsole</title>
 		<script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
 		
+		<!-- font -->
+		<link rel="stylesheet" type="text/css" href="fonts/web_fonts/roboto_regular_macroman/stylesheet.css">
+		<style type="text/css">
+			body{
+			font-family: 'robotoregular';
+					}
+		</style>
+		
 		<!-- web components -->
 		<link rel="import" href="application_components/getdown-webconsole-application.html">
 		
