--- a/getdown-webconsole/src/main/resources/static/webconsole/application_components/download-list-view.html
+++ b/getdown-webconsole/src/main/resources/static/webconsole/application_components/download-list-view.html
@@ -39,22 +39,24 @@
 			}
 			
 			#list-item-status {
-				padding: 10px;
+				padding: 2px;
 				width: 90%;
 				display: flex;
 				flex-direction: column;
 			}
 			
-			#list-item-status div {
-				padding: 3px;
-			}
+			
 			
 			#list-item-status-name {
 				font-size: 12pt;
 			}
 			
 			#list-item-status-state {
-				font-size: 10pt;
+				font-size: 9pt;
+			}
+			
+			#list-item-status-progress {
+				padding: 0px;
 			}
 			
 			#list-item-status-message {
@@ -102,9 +104,8 @@
 						
 						<div id="list-item-status">
 							<div id="list-item-status-name">{{download.name}}</div>
-							<div id="list-item-status-state">{{download.state}} {{download.progress}} of {{download.size}} bytes received</div>
-							<div id="list-item-status-message">{{download.message}}</div>
-							<div>
+							<div id="list-item-status-state">{{download.state}} {{download.progress}}/{{download.size}}</div>
+							<div id="list-item-status-progress">
 								<paper-progress style="width: 100%" value="{{(download.progress / download.size)*100}}" id="paper_progress">{{download.progress}}</paper-progress>
 							</div>
 						</div>
