--- a/getdown-webconsole/src/main/resources/static/webapp/app/styles/app-theme.html
+++ b/getdown-webconsole/src/main/resources/static/webapp/app/styles/app-theme.html
@@ -124,7 +124,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   /* Height of the scroll area */
   .content {
-    height: 900px;
+    height: 100%;
   }
 
   /* Breakpoints */
@@ -177,7 +177,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
     iron-pages {
-      padding: 48px 62px;
+      padding: 15px 15px;
     }
 
   }
