--- a/getdown-webconsole/src/main/resources/static/webapp/app/elements/download-list/download-list.html
+++ b/getdown-webconsole/src/main/resources/static/webapp/app/elements/download-list/download-list.html
@@ -1,13 +1,13 @@
-<link rel="import" href="../../bower_components/iron-list/iron-list.html" xmlns="http://www.w3.org/1999/html">
-<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
-<link rel="import" href="../../bower_components/paper-progress/paper-progress.html">
+<link rel="import" href="../../../bower_components/iron-list/iron-list.html" xmlns="http://www.w3.org/1999/html">
+<link rel="import" href="../../../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../../../bower_components/paper-progress/paper-progress.html">
 <dom-module id="download-list">
 
-	<style>
+  <style>
 
     :host {
-        width: 100%;
-        height: 100%;
+      width: 100%;
+      height: 100%;
     }
 
     .item {
@@ -44,40 +44,37 @@
       font-size: 14px;
     }
 
-
-
     .add_fab {
       position: fixed;
       bottom: 20px;
       right: 20px;
       -webkit-transform: translateZ(0);
     }
-	</style>
-
-	<template>
+  </style>
+  <template>
 
     <iron-list id="list" items="[[data]]" as="download">
       <template>
 
         <div class="item">
 
-            <img class="avatar" src="../../images/icon-getdown.png">
+          <img class="avatar" src="../../images/icon-getdown.png">
 
-            <div class="pad">
-              <div class="primary">{{download.name}}</div>
-              <div class="secondary">
-                <span>{{download.state}}</span>
-                <span>{{download.progress}}</span>&nbsp;/
-                <span>{{download.size}}</span>
-                <paper-progress style="width: 100%" value="{{(download.progress / download.size)*100}}"
-                                id="paper_progress">{{download.progress}}
-                </paper-progress>
-              </div>
+          <div class="pad">
+            <div class="primary">{{download.name}}</div>
+            <div class="secondary">
+              <span>{{download.state}}</span>
+              <span>{{download.progress}}</span>&nbsp;/
+              <span>{{download.size}}</span>
+              <paper-progress style="width: 100%" value="{{(download.progress / download.size)*100}}"
+                              id="paper_progress">{{download.progress}}
+              </paper-progress>
             </div>
-
-            <iron-icon icon="reorder"></iron-icon>
-
           </div>
+
+          <iron-icon icon="reorder"></iron-icon>
+
+        </div>
 
       </template>
     </iron-list>
@@ -87,5 +84,5 @@
 
   </template>
 
-	<script src="./download-list.js"></script>
+  <script src="./download-list.js"></script>
 </dom-module>
