add iron-list styling for correct scrolling

--- a/getdown-webconsole/src/main/resources/static/webapp/app/elements/download-list/download-list.html
+++ b/getdown-webconsole/src/main/resources/static/webapp/app/elements/download-list/download-list.html
@@ -10,6 +10,13 @@
       height: 100%;
     }
 
+
+
+	iron-list {
+      padding-bottom: 16px;
+      height: 100%;
+    }
+
     .item {
       @apply(--layout-horizontal);
 
