copy getdown js client from polymer 0.x app

--- a/getdown-webconsole/src/main/web/app/elements/download-list/download-list.html
+++ b/getdown-webconsole/src/main/web/app/elements/download-list/download-list.html
@@ -1,3 +1,4 @@
+
 <dom-module id="download-list">
 
   <style>
@@ -57,7 +58,7 @@
   </style>
   <template>
 
-    <iron-list id="list" class="list" items="[[data]]" as="download">
+    <iron-list id="list" class="list" items="[[downloads]]" as="download">
       <template>
 
         <div class="item">
