--- a/getdown-webconsole/src/main/web/app/elements/elements.html
+++ b/getdown-webconsole/src/main/web/app/elements/elements.html
@@ -25,6 +25,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-list/iron-list.html" xmlns="http://www.w3.org/1999/html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
+<script src="../bower_components/sockjs/sockjs.min.js"></script>
+<script src="../bower_components/stomp-websocket/lib/stomp.min.js"></script>
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -38,3 +40,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="download-list/download-list.html">
+
