--- a/getdown-webconsole/src/main/web/app/index.html
+++ b/getdown-webconsole/src/main/web/app/index.html
@@ -47,6 +47,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- endbuild-->
 
   <!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
+  <script src="../../bower_components/sockjs/sockjs.min.js"></script>
+  <script src="../../bower_components/stomp-websocket/lib/stomp.min.js"></script>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <!-- endbuild -->
 
@@ -77,7 +79,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
           <a data-route="users" href="/users" on-click="onDataRouteClick">
             <iron-icon icon="folder-open"></iron-icon>
-            <span>Settings</span>
+            <span>settings</span>
           </a>
 
         </paper-menu>
@@ -91,13 +93,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
           <span class="flex"></span>
 
-         
+
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
             <div class="app-name">getdown</div>
           </div>
 
-         
+
 
         </paper-toolbar>
 
@@ -125,6 +127,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- build:js scripts/app.js -->
   <script src="scripts/app.js"></script>
+  <!-- endbuild-->
+
+
+  <!-- build:js scripts/getdown.js -->
+  <script src="scripts/getdown.js"></script>
   <!-- endbuild-->
 </body>
 
