add download message to output

--- a/getdown-webconsole/src/main/web/app/elements/download-list/download-list.html
+++ b/getdown-webconsole/src/main/web/app/elements/download-list/download-list.html
@@ -74,6 +74,9 @@
               <paper-progress style="width: 100%" value="{{(download.progress / download.size)*100}}"
                               id="paper_progress">{{download.progress}}
               </paper-progress>
+              <div>
+                <span>{{download.message}}</span>
+              </div>
             </div>
           </div>
 
