--- a/getdown-console/app/elements/elements.html
+++ b/getdown-console/app/elements/elements.html
@@ -22,3 +22,4 @@
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
+<link rel="import" href="download-view/download-view.html">
