--- a/getdown-console/app/index.html
+++ b/getdown-console/app/index.html
@@ -3,126 +3,119 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>getdown console</title>
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>getdown console</title>
 
-  <!-- Place favicon.ico in the `app/` directory -->
+	<meta name="theme-color" content="#2E3AA1">
 
-  <!-- Chrome for Android theme color -->
-  <meta name="theme-color" content="#2E3AA1">
+	<link rel="manifest" href="manifest.json">
 
-  <!-- Web Application Manifest -->
-  <link rel="manifest" href="manifest.json">
+	<!-- Tile color for Win8 -->
+	<meta name="msapplication-TileColor" content="#3372DF">
 
-  <!-- Tile color for Win8 -->
-  <meta name="msapplication-TileColor" content="#3372DF">
+	<!-- Add to homescreen for Chrome on Android -->
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="application-name" content="PSK">
+	<link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
-  <!-- Add to homescreen for Chrome on Android -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="PSK">
-  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
+	<!-- Add to homescreen for Safari on iOS -->
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black">
+	<meta name="apple-mobile-web-app-title" content="getdown-console">
+	<link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
-  <!-- Add to homescreen for Safari on iOS -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="getdown-console">
-  <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+	<!-- Tile icon for Win8 (144x144) -->
+	<meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
 
-  <!-- Tile icon for Win8 (144x144) -->
-  <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+	<!-- build:css styles/main.css -->
+	<link rel="stylesheet" href="styles/main.css">
+	<!-- endbuild-->
 
-  <!-- build:css styles/main.css -->
-  <link rel="stylesheet" href="styles/main.css">
-  <!-- endbuild-->
+	<!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
+	<script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+	<!-- endbuild -->
 
-  <!-- build:js bower_components/webcomponentsjs/webcomponents-lite.min.js -->
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <!-- endbuild -->
+	<link rel="import" href="elements/elements.html">
 
-  <!-- Because this project uses vulcanize this should be your only html import
-       in this file. All other imports should go in elements.html -->
-  <link rel="import" href="elements/elements.html">
-
-  <!-- For shared styles, shared-styles.html import in elements.html -->
-  <style is="custom-style" include="shared-styles"></style>
+	<!-- For shared styles, shared-styles.html import in elements.html -->
+	<style is="custom-style" include="shared-styles"></style>
 </head>
 
 <body unresolved>
-  <!-- build:remove -->
-  <span id="browser-sync-binding"></span>
-  <!-- endbuild -->
+<!-- build:remove -->
+<span id="browser-sync-binding"></span>
+<!-- endbuild -->
 
-  <template is="dom-bind" id="app">
+<template is="dom-bind" id="app">
 
-    <paper-drawer-panel id="paperDrawerPanel">
-      <!-- Drawer Scroll Header Panel -->
-      <paper-scroll-header-panel drawer fixed>
+	<paper-drawer-panel id="paperDrawerPanel">
+		<!-- Drawer Scroll Header Panel -->
+		<paper-scroll-header-panel drawer fixed>
 
-        <!-- Drawer Toolbar -->
-        <paper-toolbar id="drawerToolbar">
-          <span class="menu-name">Menu</span>
-        </paper-toolbar>
+			<!-- Drawer Toolbar -->
+			<paper-toolbar id="drawerToolbar">
+				<span class="menu-name">Menu</span>
+			</paper-toolbar>
 
-        <!-- Drawer Content -->
-        <paper-menu class="app-menu" attr-for-selected="data-route" selected="[[route]]">
-          <a data-route="home" href="{{baseUrl}}">
-            <iron-icon icon="home"></iron-icon>
-            <span>Home</span>
-          </a>
-        </paper-menu>
-      </paper-scroll-header-panel>
+			<!-- Drawer Content -->
+			<paper-menu class="app-menu" attr-for-selected="data-route" selected="[[route]]">
+				<a data-route="home" href="{{baseUrl}}">
+					<iron-icon icon="home"></iron-icon>
+					<span>Home</span>
+				</a>
+			</paper-menu>
+		</paper-scroll-header-panel>
 
-      <!-- Main Area -->
-      <paper-scroll-header-panel main id="headerPanelMain" condenses keep-condensed-header>
-        <!-- Main Toolbar -->
-        <paper-toolbar id="mainToolbar" class="tall">
-          <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
+		<!-- Main Area -->
+		<paper-scroll-header-panel main id="headerPanelMain" condenses keep-condensed-header>
+			<!-- Main Toolbar -->
+			<paper-toolbar id="mainToolbar" class="tall">
+				<paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
 
-          <span class="space"></span>
+				<span class="space"></span>
 
-          <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh"></paper-icon-button>
-          <paper-icon-button icon="search"></paper-icon-button>
+				<!-- Toolbar icons -->
+				<paper-icon-button icon="refresh"></paper-icon-button>
+				<paper-icon-button icon="search"></paper-icon-button>
 
-          <!-- Application name -->
-          <div class="middle middle-container">
-            <div class="app-name">getdown console</div>
-          </div>
+				<!-- Application name -->
+				<div class="middle middle-container">
+					<div class="app-name">getdown console</div>
+				</div>
 
-          <!-- Application sub title -->
-          <div class="bottom bottom-container">
-            <div class="bottom-title">download stuff</div>
-          </div>
-        </paper-toolbar>
+				<!-- Application sub title -->
+				<div class="bottom bottom-container">
+					<div class="bottom-title">download stuff</div>
+				</div>
+			</paper-toolbar>
 
-        <!-- Main Content -->
-        <div class="content">
-          <iron-pages attr-for-selected="data-route" selected="{{route}}">
-            <section data-route="home" tabindex="-1">
-              <paper-material elevation="1">
-              </paper-material>
+			<!-- Main Content -->
+			<div class="content">
+				<iron-pages attr-for-selected="data-route" selected="{{route}}">
 
-              <paper-material elevation="1">
-                <p>This is another card.</p>
-              </paper-material>
-            </section>
+					<section data-route="home" tabindex="-1">
+						<paper-material elevation="1">
+							<download-view></download-view>
+						</paper-material>
+					</section>
 
-          </iron-pages>
-        </div>
-      </paper-scroll-header-panel>
-    </paper-drawer-panel>
+				</iron-pages>
+			</div>
 
-    <paper-toast id="toast">
-      <span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">Ok</span>
-    </paper-toast>
+		</paper-scroll-header-panel>
+	</paper-drawer-panel>
 
-  </template>
+	<paper-toast id="toast">
+		<span class="toast-hide-button" role="button" tabindex="0" onclick="app.$.toast.hide()">Ok</span>
+	</paper-toast>
 
-  <!-- build:js scripts/app.js -->
-  <script src="scripts/app.js"></script>
-  <!-- endbuild-->
+</template>
+
+<!-- build:js scripts/app.js -->
+<script src="scripts/app.js"></script>
+<!-- endbuild-->
 </body>
 
 </html>
