--- a/getdown-console/app/elements/routing.html
+++ b/getdown-console/app/elements/routing.html
@@ -33,19 +33,19 @@
     });
 
     page('/', function() {
-      app.route = 'home';
+      app.route = 'downloads';
       setFocus(app.route);
     });
 
     page(app.baseUrl, function() {
-      app.route = 'home';
+      app.route = 'downloads';
       setFocus(app.route);
     });
 
 
     // 404
     page('*', function() {
-      app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to Home Page';
+      app.$.toast.text = 'Can\'t find: ' + window.location.href  + '. Redirected you to downloads Page';
       app.$.toast.show();
       page.redirect(app.baseUrl);
     });
