--- a/getdown-console/app/styles/app-theme.html
+++ b/getdown-console/app/styles/app-theme.html
@@ -144,13 +144,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     height: 900px;
   }
 
-  section[data-route="home"] paper-material {
-    @apply(--paper-font-body2);
-  }
+  /*section[data-route="downloads"] paper-material {*/
+    /*padding: 20px;*/
+    /*@apply(--paper-font-body2);*/
+  /*}*/
 
-  section[data-route="home"] paper-material .subhead {
-    @apply(--paper-font-subhead);
-  }
+  /*section[data-route="downloads"] paper-material .subhead {*/
+    /*@apply(--paper-font-subhead);*/
+  /*}*/
 
   paper-material {
     border-radius: 2px;
@@ -198,9 +199,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       border-right: 1px solid rgba(0, 0, 0, 0.14);
     }
 
-    iron-pages {
-      padding: 48px 62px;
-    }
+
 
     paper-material {
       width: calc(98% - 46px);
