work on download-view

--- a/getdown-console/app/index.html
+++ b/getdown-console/app/index.html
@@ -54,7 +54,7 @@
 		<!-- sidebar -->
 		<paper-scroll-header-panel drawer fixed>
 			<paper-toolbar id="drawerToolbar">
-				<span class="menu-name">Menu</span>
+				<span class="menu-name">getdown</span>
 			</paper-toolbar>
 			<paper-menu class="app-menu" attr-for-selected="data-route" selected="[[route]]">
 				<a data-route="downloads" href="{{baseUrl}}">
