--- a/getdown-console/app/elements/download-view/download-view.html
+++ b/getdown-console/app/elements/download-view/download-view.html
@@ -1,4 +1,3 @@
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="download-view">
@@ -10,12 +9,24 @@
 			}
 
 			.card-header-tool {
+				--paper-toolbar-height: 32px;
+				--paper-toolbar-background: red;
 			}
 
-			.content{
+			.card-header-tool-title{
+				font-size: small;
+				margin: 0 8px;
+			}
+
+			.card-header-tool-icon{
+
+			}
+
+			.content {
 				padding: 16px;
 				height: 100%;
 			}
+
 			paper-material {
 				width: calc(98% - 46px);
 				margin-bottom: 32px;
@@ -24,41 +35,28 @@
 
 		<paper-toolbar id="toolbar">
 			<paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
-			<span class="space" >&nbsp;</span>
-
-			<!-- Application name -->
-			<div class="middle middle-container">
-				<div class="app-name">downloads</div>
-			</div>
-
-			<span class="space" style="width: 100%;"></span>
-
-			<!-- Toolbar icons -->
-			<paper-icon-button align="right" icon="refresh" ></paper-icon-button>
-			<paper-icon-button align="right" icon="search"></paper-icon-button>
-
+			<span class="title">downloads</span>
+			<paper-icon-button icon="refresh"></paper-icon-button>
+			<paper-icon-button icon="add">+</paper-icon-button>
 		</paper-toolbar>
 
 		<!-- Main Content -->
 		<div class="content">
-			<section tabindex="-1">
-				<paper-material elevation="1">
-					<paper-toolbar id="toolbar" class="card-header-tool">
-						<!-- Application name -->
-						<div class="middle middle-container">
-							<div class="list-name">active</div>
-						</div>
 
-						<span class="space" style="width: 100%;"></span>
+			<section tabindex="-1" >
 
-						<!-- Toolbar icons -->
-						<paper-icon-button align="right" icon="refresh" ></paper-icon-button>
-						<paper-icon-button align="right" icon="search"></paper-icon-button>
-
+				<paper-material elevation="1" style="width: 100%;">
+					<paper-toolbar id="card-header-toolbar" class="card-header-tool" middleJustify>
+						<span class="title" style="margin-left:1px;">active</span>
+						<paper-icon-button icon="refresh" ></paper-icon-button>
 					</paper-toolbar>
-					Downloads!
+					<section>
+						Downloads!
+					</section>
 				</paper-material>
+
 			</section>
+
 		</div>
 
 	</template>
